# ThothTerm

./: .gitignore  ARCHITECTURE.md  BUILD_LINUX.md  BUILD_WINDOWS.md  CLAUDE.md  COMPILATION.md  CROSS_PLATFORM.md  Cargo.toml  FEATURES.md  PLUGIN_SDK.md  PROGRESS.md  README.md  TIPS_AND_TRICKS.md  demo.tape
.github/workflows/: build.yml  release.yml
bidi/: Cargo.toml
bidi/examples/: shaping.rs
bidi/src/: lib.rs
bidi/tests/: conformance.rs
ci/: thothterm.wxs  thothterm_portable_linux.toml  thothterm_portable_windows.toml
codec/: Cargo.toml
codec/src/: lib.rs
color-types/: Cargo.toml
color-types/src/: lib.rs
config/: Cargo.toml
config/derive/: Cargo.toml
config/src/: background.rs  bell.rs  cell.rs  color.rs  config.rs  daemon.rs  exec_domain.rs  font.rs  frontend.rs  keyassignment.rs  keys.rs  lib.rs  lua.rs  meta.rs  scheme_data.rs  serial.rs  ssh.rs  terminal.rs  tls.rs  units.rs  unix.rs  version.rs  window.rs  wsl.rs
custom_crates/: Cargo.toml
custom_crates/example-plugins/thothterm-plugin-git-info/: Cargo.toml  plugin.toml
custom_crates/example-plugins/thothterm-plugin-git-info/src/: lib.rs
custom_crates/example-plugins/thothterm-plugin-hello/: Cargo.toml  plugin.toml
custom_crates/example-plugins/thothterm-plugin-hello/src/: lib.rs
custom_crates/example-plugins/thothterm-plugin-time/: Cargo.toml  plugin.toml
custom_crates/example-plugins/thothterm-plugin-time/src/: lib.rs
custom_crates/thothterm-ai/: Cargo.toml
custom_crates/thothterm-ai/src/: error.rs  lib.rs  types.rs
custom_crates/thothterm-ai/tests/: ai_test.rs
custom_crates/thothterm-config/: Cargo.toml
custom_crates/thothterm-config/src/: error.rs  lib.rs  run_mode.rs
custom_crates/thothterm-config/tests/: config_test.rs
custom_crates/thothterm-plugin-sdk/: Cargo.toml
custom_crates/thothterm-plugin-sdk/src/: lib.rs
custom_crates/thothterm-plugins/: Cargo.toml
custom_crates/thothterm-plugins/src/: engine.rs  error.rs  lib.rs  manager.rs  manifest.rs
custom_crates/thothterm-plugins/tests/: plugin_test.rs
custom_crates/thothterm-web3/: Cargo.toml
custom_crates/thothterm-web3/src/: detector.rs  ens.rs  error.rs  gas.rs  lib.rs  rpc.rs  wallet.rs
custom_crates/thothterm-web3/tests/: web3_test.rs
env-bootstrap/: Cargo.toml
env-bootstrap/src/: lib.rs  ringlog.rs
lua-api-crates/battery/: Cargo.toml
lua-api-crates/battery/src/: lib.rs
lua-api-crates/color-funcs/: Cargo.toml
lua-api-crates/color-funcs/src/: image_colors.rs  lib.rs
lua-api-crates/filesystem/src/: lib.rs
lua-api-crates/logging/src/: lib.rs
lua-api-crates/mux/: Cargo.toml
lua-api-crates/mux/src/: lib.rs  (+2 more)
lua-api-crates/plugin/: Cargo.toml
lua-api-crates/procinfo-funcs/: Cargo.toml
lua-api-crates/serde-funcs/: Cargo.toml
lua-api-crates/share-data/: Cargo.toml
lua-api-crates/spawn-funcs/: Cargo.toml
lua-api-crates/ssh-funcs/: Cargo.toml
lua-api-crates/termwiz-funcs/: Cargo.toml
lua-api-crates/time-funcs/: Cargo.toml
lua-api-crates/url-funcs/: Cargo.toml
lua-api-crates/window-funcs/: Cargo.toml
luahelper/: Cargo.toml
luahelper/src/: enumctor.rs  lib.rs
mux/: Cargo.toml
mux/src/: connui.rs  domain.rs  lib.rs  localpane.rs  pane.rs  renderable.rs  ssh.rs  ssh_agent.rs  tab.rs  termwiztermtab.rs  tmux.rs  tmux_commands.rs
procinfo/: Cargo.toml
procinfo/src/: lib.rs
pty/examples/: narrow.rs
pty/src/: lib.rs  serial.rs  unix.rs
strip-ansi-escapes/src/: main.rs
sync-color-schemes/: Cargo.toml
sync-color-schemes/src/: main.rs
term/: Cargo.toml
term/src/: color.rs  config.rs  input.rs  lib.rs  screen.rs  terminal.rs
termwiz/: Cargo.toml
termwiz/examples/: gennerdfonts.rs
termwiz/src/: error.rs  input.rs  lib.rs
termwiz/src/caps/: mod.rs  probed.rs
termwiz/src/render/: windows.rs
thothterm/: Cargo.toml
thothterm-blob-leases/: Cargo.toml
thothterm-blob-leases/src/: simple_tempdir.rs
thothterm-cell/: Cargo.toml
thothterm-cell/src/: color.rs  image.rs  lib.rs
thothterm-char-props/: Cargo.toml
thothterm-char-props/codegen/: Cargo.toml
thothterm-client/: Cargo.toml
thothterm-client/src/: client.rs  discovery.rs  domain.rs
thothterm-dynamic/: Cargo.toml
thothterm-dynamic/derive/: Cargo.toml
thothterm-dynamic/src/: lib.rs
thothterm-dynamic/tests/: fromdynamic.rs  todynamic.rs
thothterm-escape-parser/: Cargo.toml
thothterm-escape-parser/src/: color.rs  csi.rs  error.rs  hyperlink.rs  lib.rs  osc.rs
thothterm-font/: Cargo.toml
thothterm-font/src/: ftwrap.rs  hbwrap.rs  lib.rs  parser.rs  units.rs
thothterm-font/src/locator/: core_text.rs  font_config.rs
thothterm-font/src/rasterizer/: colr.rs  freetype.rs
thothterm-font/src/shaper/: harfbuzz.rs  mod.rs
thothterm-gui/: Cargo.toml  build.rs
thothterm-gui-subcommands/: Cargo.toml
thothterm-gui-subcommands/src/: lib.rs
thothterm-gui/src/: commands.rs  customglyph.rs  download.rs  frontend.rs  glyphcache.rs  inputmap.rs  main.rs  renderstate.rs  scrollbar.rs  selection.rs  shapecache.rs  spawn.rs  tabbar.rs  thothterm_startup.rs  update.rs  utilsprites.rs
thothterm-input-types/: Cargo.toml
thothterm-input-types/src/: lib.rs
thothterm-mux-server/: Cargo.toml
thothterm-mux-server-impl/: Cargo.toml
thothterm-mux-server-impl/src/: dispatch.rs  lib.rs  local.rs  sessionhandler.rs
thothterm-mux-server/src/: main.rs  ossl.rs
thothterm-open-url/: Cargo.toml
thothterm-ssh/: Cargo.toml
thothterm-ssh/examples/: ssh.rs
thothterm-ssh/src/: config.rs  sessioninner.rs
thothterm-ssh/tests/: sshd.rs
thothterm-surface/: Cargo.toml
thothterm-surface/src/: cellcluster.rs  change.rs  hyperlink.rs  lib.rs
thothterm-surface/src/line/: cellref.rs  clusterline.rs  line.rs  test.rs  vecstorage.rs
thothterm-toast-notification/: Cargo.toml
thothterm-toast-notification/src/: dbus.rs  macos.rs  windows.rs
thothterm-uds/: Cargo.toml
thothterm-version/: Cargo.toml  build.rs
thothterm-version/src/: lib.rs
thothterm/src/: asciicast.rs  main.rs
thothterm_assets/: ICON_DESIGN.md
window/: Cargo.toml
window/examples/: async.rs
window/src/: lib.rs
(+97 files in other folders)
