[package]
name = "config"
version = "0.1.0"
authors = ["Mohamed Mounir (Lord1Egypt) <akim.221992@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
env_logger.workspace = true

[features]
distro-defaults = []

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
colorgrad.workspace = true
dirs-next.workspace = true
enum-display-derive.workspace = true
hostname.workspace = true
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
luahelper.workspace = true
mlua = {workspace=true, features=["vendored", "lua54", "async", "send", "serialize"]}
notify.workspace = true
ordered-float = { workspace=true, features = ["serde"] }
portable-pty = { workspace=true, features = ["serde_support"]}
promise.workspace = true
serde = {workspace=true, features = ["rc", "derive"]}
serde_json.workspace = true
shlex.workspace = true
smol.workspace = true
termwiz = { workspace=true, features=["use_serde"] }
toml.workspace = true
umask.workspace = true
thothterm-bidi.workspace = true
thothterm-config-derive.workspace = true
thothterm-dynamic.workspace = true
thothterm-input-types.workspace = true
thothterm-ssh.workspace = true
thothterm-term = { workspace = true, features=["use_serde"] }

[target."cfg(unix)".dependencies]
nix = {workspace=true, features=["resource"]}

[target."cfg(windows)".dependencies]
winapi = { workspace=true, features = ["winuser"]}
