[workspace]
resolver = "2"
members = [
    "thothterm-config",
    "thothterm-ai",
    "thothterm-web3",
    "thothterm-plugins",
    "thothterm-plugin-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Mohamed Mounir <akim.221992@gmail.com>"]
repository = "https://github.com/lordegypt/ThothTerm"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
tempfile = "3"
