[package]
authors = ["Wez Furlong"]
name = "termwiz"
version = "0.24.0"
edition = "2018"
repository = "https://github.com/wezterm/wezterm"
description = "Terminal Wizardry for Unix and Windows"
license = "MIT"
documentation = "https://docs.rs/termwiz"
keywords = ["terminal", "readline", "console", "curses"]
readme = "README.md"

[dependencies]
anyhow.workspace = true
bitflags = "2.0"
cassowary = {workspace=true, optional=true}
fancy-regex.workspace = true
filedescriptor.workspace = true
finl_unicode.workspace = true
fixedbitset.workspace = true
fnv = {workspace=true, optional=true}
image = {workspace=true, optional=true}
libc.workspace = true
log.workspace = true
memmem.workspace = true
num-derive.workspace = true
num-traits.workspace = true
ordered-float = {workspace = true, features=["std"]}
pest = {workspace=true, optional=true}
pest_derive = {workspace=true, optional=true}
phf.workspace = true
serde = {workspace=true, features = ["rc", "derive"], optional=true}
sha2 = {workspace=true, optional=true}
siphasher.workspace = true
terminfo.workspace = true
thiserror.workspace = true
ucd-trie.workspace = true
unicode-segmentation.workspace = true
vtparse.workspace = true
thothterm-bidi.workspace = true
thothterm-blob-leases = {workspace=true, optional=true}
thothterm-cell = {workspace = true, features=["std"]}
thothterm-char-props.workspace = true
thothterm-color-types = {workspace = true, features=["std"]}
thothterm-dynamic = {workspace = true, features=["std"]}
thothterm-escape-parser = {workspace = true, features=["std"]}
thothterm-input-types.workspace = true
thothterm-surface = {workspace = true, features=["std", "appdata"]}

[features]
default = ["image", "tmux_cc"]
widgets = ["cassowary", "fnv"]
use_serde = ["serde", "thothterm-color-types/use_serde", "thothterm-blob-leases/serde", "bitflags/serde", "thothterm-input-types/serde", "thothterm-escape-parser/use_serde", "thothterm-cell/use_serde", "thothterm-surface/use_serde"]
use_image = ["image", "dep:image", "thothterm-escape-parser/use_image", "thothterm-escape-parser/kitty-shm", "thothterm-cell/use_image", "thothterm-surface/use_image"]
image = ["sha2", "thothterm-blob-leases", "thothterm-escape-parser/image"]
tmux_cc = ["pest", "pest_derive", "thothterm-escape-parser/tmux_cc"]
docs = ["widgets", "use_serde", "image", "tmux_cc"]

[dev-dependencies]
criterion.workspace = true
env_logger.workspace = true
k9.workspace = true

[target."cfg(unix)".dependencies]
signal-hook.workspace = true
termios.workspace = true
nix = {workspace=true, features=["mman", "fs"]}

[target."cfg(windows)".dependencies.winapi]
features = [
    "winbase",
    "winerror",
    "winnls",
    "winuser",
    "consoleapi",
    "handleapi",
    "fileapi",
    "synchapi",
    "memoryapi",
    "winnt",
    "impl-default"
]
workspace = true

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[[bench]]
name = "cell"
harness = false

