[package]
name = "thothterm-font"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendor-jetbrains = []
vendor-roboto = []
vendor-noto-emoji = []
vendor-nerd-font-symbols = []

[dependencies]
anyhow.workspace = true
cairo-rs.workspace = true
config.workspace = true
encoding_rs.workspace = true
enum-display-derive.workspace = true
euclid.workspace = true
finl_unicode.workspace = true
freetype.workspace = true
harfbuzz.workspace = true
image.workspace = true
lazy_static.workspace = true
lfucache.workspace = true
log.workspace = true
memmap2.workspace = true
metrics.workspace = true
ordered-float.workspace = true
rangeset.workspace = true
termwiz.workspace = true
thiserror.workspace = true
walkdir.workspace = true
thothterm-bidi.workspace = true
thothterm-color-types.workspace = true
thothterm-input-types.workspace = true
thothterm-term = { workspace=true, features=["use_serde"] }
thothterm-toast-notification.workspace = true

[target.'cfg(any(target_os = "android", all(unix, not(target_os = "macos"))))'.dependencies]
fontconfig.workspace = true

[target."cfg(windows)".dependencies]
dwrote.workspace = true
winapi.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
cocoa.workspace = true
core-foundation.workspace = true
core-text.workspace = true
objc.workspace = true

[dev-dependencies]
env_logger.workspace = true
k9.workspace = true
