[package]
authors = ["Wez Furlong"]
name = "thothterm-surface"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/wezterm/wezterm"
description = "Surface and Line types for terminals"
license = "MIT"
documentation = "https://docs.rs/thothterm-surface"
keywords = ["terminal", "surface", "line"]

[dependencies]
bitflags = "2.0"
fancy-regex.workspace = true
finl_unicode.workspace = true
fixedbitset.workspace = true
ordered-float.workspace = true
serde = {workspace=true, optional=true}
siphasher.workspace = true
unicode-segmentation.workspace = true
thothterm-bidi.workspace = true
thothterm-blob-leases = {workspace=true, optional=true}
thothterm-cell = {workspace = true}
thothterm-char-props.workspace = true
thothterm-color-types = {workspace = true}
thothterm-dynamic = {workspace = true}
thothterm-escape-parser = {workspace = true}
thothterm-input-types.workspace = true

[features]
default = []
std = ["fancy-regex/std", "thothterm-cell/std", "thothterm-dynamic/std", "thothterm-escape-parser/std", "fixedbitset/std", "fancy-regex/perf", "fancy-regex/unicode"]
appdata = ["std"]
use_serde = ["serde"] #, "thothterm-color-types/use_serde", "thothterm-blob-leases/serde", "bitflags/serde", "thothterm-input-types/serde", "thothterm-escape-parser/use_serde", "thothterm-cell/use_serde"]
use_image = ["thothterm-cell/use_image"] # "image", "dep:image", "thothterm-escape-parser/use_image", "thothterm-escape-parser/kitty-shm", "thothterm-cell/use_image"]

[dev-dependencies]
k9.workspace = true

