[package]
name = "thothterm-plugins"
version = "0.1.0"
edition = "2021"
description = "WASM plugin system for ThothTerm"
license = "MIT"

[dependencies]
thothterm-config = { path = "../thothterm-config" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
# WASM runtime — optional so the crate builds without wasmtime installed
wasmtime = { version = "25", optional = true }
wasmtime-wasi = { version = "25", optional = true }

[features]
default = ["wasm"]
wasm = ["wasmtime", "wasmtime-wasi"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
